[metadata]
name = benlib
version = 0.0.1rc2
author = Benjamin Velie
author_email = veliebm@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veliebm/benlib
project_urls =
    Bug Tracker = https://github.com/veliebm/benlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src